# nzbd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  STATUS.md  coverage.json
.githooks/: pre-commit  pre-push
.github/workflows/: arr-live.yml  ci.yml  coverage.yml  lint.yml  release.yml
crates/nzbd/: Cargo.toml
crates/nzbd-api/: Cargo.toml
crates/nzbd-api/src/: lib.rs  logbuf.rs
crates/nzbd-api/ui/: index.html  manifest.webmanifest  sw.js
crates/nzbd-cluster/: Cargo.toml
crates/nzbd-cluster/src/: election.rs  http.rs  layout.rs  leader.rs  lib.rs  proto.rs  proxy.rs  registry.rs  worker.rs
crates/nzbd-cluster/tests/: cluster_e2e.rs
crates/nzbd-compat/: Cargo.toml
crates/nzbd-compat/src/: lib.rs  xmlrpc.rs
crates/nzbd-compat/tests/: golden.rs
crates/nzbd-config/: Cargo.toml
crates/nzbd-config/src/: lib.rs
crates/nzbd-config/tests/: examples.rs
crates/nzbd-engine/: Cargo.toml
crates/nzbd-engine/src/: events.rs  failover.rs  fetch.rs  lib.rs  owner.rs  pool.rs  queue.rs  rate.rs  snapshot.rs  volumes.rs  writer.rs
crates/nzbd-engine/tests/: e2e.rs
crates/nzbd-feed/: Cargo.toml
crates/nzbd-feed/src/: filter.rs  lib.rs  parse.rs
crates/nzbd-nntp/: Cargo.toml
crates/nzbd-nntp/src/: lib.rs  transport.rs
crates/nzbd-nserv/: Cargo.toml
crates/nzbd-nserv/src/: lib.rs
crates/nzbd-nzb/: Cargo.toml
crates/nzbd-nzb/src/: lib.rs
crates/nzbd-post/: Cargo.toml
crates/nzbd-post/src/: deobfuscate.rs  lib.rs  manager.rs  par2.rs  rename.rs  script.rs  tools.rs
crates/nzbd-post/tests/: pp_pipeline.rs
crates/nzbd-state/: Cargo.toml
crates/nzbd-state/src/: history.rs  lib.rs
crates/nzbd-types/: Cargo.toml
crates/nzbd-types/src/: lib.rs
crates/nzbd-yenc/: Cargo.toml
crates/nzbd-yenc/src/: lib.rs
crates/nzbd/src/: main.rs  tls.rs
crates/nzbd/tests/: daemon.rs  ui_boot.rs  ui_boot_harness.js
dev/: README.md  docker-compose.yml  nzbd.toml.example
docs/: ARCHITECTURE.md  CLUSTERING.md  CONFIGURATION.md  DEPLOY.md  INSTALL.md  USAGE.md
examples/docker-compose/: docker-compose.yml  nzbd.toml.example
examples/kubernetes/: README.md  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
examples/systemd/: nzbd.service
packaging/homebrew/: nzbd.rb
scripts/: coverage-badges.py
