[workspace]
resolver = "2"
members = [
    "crates/nzbd-types",
    "crates/nzbd-nzb",
    "crates/nzbd-yenc",
    "crates/nzbd-nntp",
    "crates/nzbd-engine",
    "crates/nzbd-post",
    "crates/nzbd-state",
    "crates/nzbd-config",
    "crates/nzbd-api",
    "crates/nzbd-compat",
    "crates/nzbd",
    "crates/nzbd-nserv",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
# License note: this code is written from scratch against a behavioral spec
# (docs/ARCHITECTURE.md §3). If any implementation is ever ported closely from
# nzbget source (GPL-2.0-or-later), the affected crate must switch to GPL.
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/nzbd"

[workspace.dependencies]
nzbd-types = { path = "crates/nzbd-types" }
nzbd-nzb = { path = "crates/nzbd-nzb" }
nzbd-yenc = { path = "crates/nzbd-yenc" }
nzbd-nntp = { path = "crates/nzbd-nntp" }
nzbd-engine = { path = "crates/nzbd-engine" }
nzbd-post = { path = "crates/nzbd-post" }
nzbd-state = { path = "crates/nzbd-state" }
nzbd-config = { path = "crates/nzbd-config" }
nzbd-api = { path = "crates/nzbd-api" }
nzbd-compat = { path = "crates/nzbd-compat" }

nzbd-nserv = { path = "crates/nzbd-nserv" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "fs", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-platform-verifier = "0.6"
tempfile = "3"
axum = "0.8"
quick-xml = "0.41"
crc32fast = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
toml = "1"
bytes = "1"

[profile.release]
lto = "thin"
codegen-units = 1
