[package]
name = "nzbd-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nzbd-types = { workspace = true }
nzbd-engine = { workspace = true }
nzbd-state = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
http-body-util = "0.1"
