[package]
name = "nzbd-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nzbd-types = { workspace = true }
nzbd-engine = { workspace = true }
nzbd-state = { workspace = true }
nzbd-post = { workspace = true }
nzbd-api = { workspace = true }
nzbd-compat = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
nzbd-nserv = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
