[package]
name = "nzbd-compat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nzbd-types = { workspace = true }
nzbd-engine = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
