[package]
name = "nzbd-compat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nzbd-types = { workspace = true }
nzbd-engine = { workspace = true }
nzbd-state = { workspace = true }
nzbd-api = { workspace = true }
nzbd-nntp = { workspace = true }
nzbd-feed = { workspace = true }
quick-xml = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
nzbd-nserv = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
