[package]
name = "nzbd-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nzbd-types = { workspace = true }
nzbd-nzb = { workspace = true }
nzbd-yenc = { workspace = true }
nzbd-nntp = { workspace = true }
nzbd-state = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
arc-swap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
nzbd-nserv = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
