[package]
name = "nzbd-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nzbd-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Phase 2 adds: rusqlite (bundled) behind a dedicated DB thread — history store

[dev-dependencies]
tempfile = { workspace = true }
