[package]
name = "nzbd-yenc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crc32fast = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
# Phase 3: FFI binding to the vendored rapidyenc SIMD decoder (CC0).
# The scalar implementation in this crate remains as fallback and as the
# differential-fuzzing oracle.
rapidyenc = []
