[package]
name = "nzbd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nzbd"
path = "src/main.rs"

[dependencies]
nzbd-types = { workspace = true }
nzbd-config = { workspace = true }
nzbd-engine = { workspace = true }
nzbd-api = { workspace = true }
nzbd-compat = { workspace = true }
nzbd-cluster = { workspace = true }
nzbd-post = { workspace = true }
nzbd-feed = { workspace = true }
nzbd-state = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
nzbd-nserv = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
